# ExcelBrief_for_Newsteps

./: .dockerignore  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  skills-lock.json  start.sh
data/workpapers/: D-10_매출채권_샘플.xlsx
deploy/hf_space/: Dockerfile  README.md
docs/: PRD.md  architecture.md  system_design.md  task_list.md  tech_doc.md
docs/reference/: xlsx_agent_tools.py
reports/: 해석_데모5400_미완성조서.md  해석_데모_범용Excel.md
src/agent/: __init__.py  analyst.py  dart_client.py  explainer.py  graph.py  graph_common.py  mcp_client.py  profiler.py  prompts.py  reviewer.py
src/agent/scraping/: README.upstream.md  __init__.py  config.py  http_fetcher.py  processing.py  security.py
src/agent/tools/: documents.py  excel.py
tests/: conftest.py  test_analyst.py  test_dart.py  test_document_tools.py  test_excel_tools.py  test_explainer.py  test_mcp.py  test_profiler.py  test_reviewer.py  test_scraping.py  test_smoke.py
ui/: next.config.mjs
ui/docs/: 00-OVERVIEW.ko.md  00-OVERVIEW.md  01-NEXTAUTH-OAUTH.ko.md  01-NEXTAUTH-OAUTH.md  02-NEXTAUTH-CREDENTIALS.ko.md  02-NEXTAUTH-CREDENTIALS.md  03-NEXTAUTH-EMAIL.ko.md  03-NEXTAUTH-EMAIL.md  04-OAUTH-DIRECT.ko.md  04-OAUTH-DIRECT.md  05-AUTH-ARCHITECTURE.md  05-STANDALONE.ko.md  05-STANDALONE.md  06-CUSTOM-JWT.md  07-API-KEY.md  08-CUSTOM-SERVER-AUTH.md  ENV_MATRIX.md  INTEGRATION.md  LANGGRAPH_DEPLOYMENT_GUIDE.ko.md  LANGGRAPH_DEPLOYMENT_GUIDE.md  PRODUCTION.md  QUICK_START.md  TROUBLESHOOTING.md
ui/public/: full-description.md
ui/scripts/: seed-users.mjs
ui/src/: middleware.ts
(+43 files in other folders)
