[project]
name = "excelbrief"
version = "0.1.0"
description = "감사조서 Excel을 회계감사기준·K-IFRS에 근거해 설명하는 에이전트 (포트폴리오 MVP)"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langgraph",
    "langgraph-cli[inmem]",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-mcp-adapters",
    "openpyxl",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
